updates on menus and header

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,6 +1,7 @@
 {
   "sections": {
     "presentation": "Presentation",
+    "multimedia": "Images & Videos",
     "related_projects": "Related projects",
     "team": "Team"
   }
