--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -1,6 +1,7 @@
 {
   "sections": {
     "presentation": "Apresentação",
+    "multimedia": "Imagens e Vídeos",
     "related_projects": "Projetos Relacionados",
     "team": "Equipa"
   }
