--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -4,5 +4,51 @@
     "multimedia": "Images & Videos",
     "related_projects": "Related projects",
     "team": "Team"
+  },
+  "projects": {
+    "list": [
+      {
+        "title": "Master’s Thesis: Decision Support System for Integrated Landscape Management Areas",
+        "date": "December 2023",
+        "description": "This master’s thesis was the foundation for LAND IT. The main features available in LAND IT were developed during this research, such as scenario analysis and comparison, scenario sharing, and the creation and editing of geometries within scenarios. The case study used for its development was the municipality of Mação and its nine AIGPs."
+      },
+      {
+        "title": "Master’s Thesis: Economic Sustainability Models for Land Use in Rural Areas",
+        "date": "January 2025",
+        "description": "This thesis focuses on post-territorial reorganisation, aiming to develop economic models to calculate the profits and costs associated with land use in the years following transformation. The study covered the following land uses: maritime pine, eucalyptus, cork oak, and olive groves. Additionally, a feasibility analysis was conducted on the installation of solar panels in the municipality of Mação."
+      },
+      {
+        "title": "Master’s Thesis: Intelligent Tools for Editing Land Use Proposals",
+        "date": "Ongoing",
+        "description": "The objective of this research is to add editing tools to LAND IT, including geometry editing tools, topological verification tools, and intelligent tools to assist users in the creation of AIGP proposals, such as a filtering system."
+      },
+      {
+        "title": "Master’s Thesis: LAND IT - Assisted and Collaborative Territorial Reorganisation Editing",
+        "date": "Ongoing",
+        "description": "Currently, LAND IT has very basic collaboration features, such as timers for handling requests. This thesis aims to identify and improve all use cases where real-time updates are essential. Furthermore, it will explore collaborative map editing, enabling multiple users to draw geometries within the same scenario simultaneously."
+      },
+      {
+        "title": "Master’s Thesis: LAND IT - Scenario Analysis and Visualisation",
+        "date": "Ongoing",
+        "description": "LAND IT includes some dashboards with statistical data developed in the early stages of the project. Currently, some of these charts are outdated, while others fail to cover relevant topics. Thus, the objective of this thesis is to enhance existing dashboards and propose new ones."
+      }
+    ],
+    "access": "Access"
+  },
+  "presentation": [
+    "LAND IT is a spatial decision support system, available as a web app, designed to assist AIGP managing entities in planning and executing territorial reorganisation. This reorganisation aims to improve the efficiency and effectiveness of land management while making the landscape more resilient to large wildfires, as seen in the municipality of Mação.",
+    "This system allows users to develop territorial reorganisation scenarios and define the operations to be implemented during transformation. Additionally, users can share scenarios with each other, analyse them, and compare them statistically to select the best solution for the territory."
+  ],
+  "multimedia": {
+    "main-page": "Scenario Editing",
+    "stats1": "Statistics - Land Use Areas",
+    "stats2": "Statistics - Transformations",
+    "transformations": "Transformation Editing"
+  },
+  "footer": {
+    "contacts": "Contacts",
+    "links": "Useful Links",
+    "entities": "Collaborating Entities",
+    "podcast": "AI-generated Podcast about LAND IT"
   }
 }
