add credits to the logo designer

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -66,6 +66,7 @@
     "podcast": "AI-generated Podcast about LAND IT",
     "LAND-IT": "LAND IT Platform",
     "consultation": "OIGP under public consultation",
-    "oigp": "How to build an OIGP?"
+    "oigp": "How to build an OIGP?",
+    "design": "Logo design by "
   }
 }
