--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -65,6 +65,7 @@
     "podcast": "Podcast gerado por IA sobre o LAND IT",
     "LAND-IT": "Plataforma LAND IT",
     "consultation": "OIGP em consulta pública",
-    "oigp": "Como construir uma OIGP?"
+    "oigp": "Como construir uma OIGP?",
+    "design": "Design do logotipo por "
   }
 }
