--- a/i18n/en/code.json
+++ b/i18n/en/code.json
@@ -430,5 +430,23 @@
   "theme.tags.tagsPageTitle": {
     "message": "Tags",
     "description": "The title of the tag list page"
+  },
+  "team.member1.role": {
+    "message": "Executive Sponsor"
+  },
+  "team.member2.role": {
+    "message": "Strategic Advisor & Project Visionary"
+  },
+  "team.member3.role": {
+    "message": "Tech Lead"
+  },
+  "team.member4.role": {
+    "message": "Full-Stack Engineer"
+  },
+  "team.member5.role": {
+    "message": "Full-Stack Engineer"
+  },
+  "team.member6.role": {
+    "message": "Technical Advisor"
   }
 }
