fix videos names and add version info in english

--- a/blog/releases/v5.5.0.md
+++ b/blog/releases/v5.5.0.md
@@ -12,7 +12,7 @@ A versão 5.5.0 do LAND IT encontra-se agora disponível. Segue-se a lista de al
 - Modificações no mecanismo de movimentação do Mapa. Por padrão, a ferramenta agora assume a forma de
   uma “mão”, alinhando-se com as práticas de outros SIG.
 - Implementação de uma nova ferramenta de seleção que possibilita a visualização das informações
-  associadas aos polígonos.
+  associadas às geometrias.
 - Elaboração de tutoriais no formato de vídeos.
 - Desenvolvimento de métodos de acessibilidade para as ferramentas de seleção, incluindo a utilização de teclas
   como a tecla ESC para cancelar as ferramentas selecionadas.
