--- a/i18n/pt/code.json
+++ b/i18n/pt/code.json
@@ -438,15 +438,18 @@
     "message": "Conselheiro Estratégico & Visionário do Projeto"
   },
   "team.member3.role": {
-    "message": "Líder Técnica"
+    "message": "Fundadora Técnica & Conselheira Técnica"
   },
   "team.member4.role": {
-    "message": "Desenvolvedor Full-Stack"
+    "message": "Líder Técnico"
   },
   "team.member5.role": {
     "message": "Desenvolvedora Full-Stack"
   },
   "team.member6.role": {
     "message": "Conselheira Técnica"
+  },
+  "team.member7.role": {
+    "message": "Desenvolvedor Full-Stack"
   }
 }
